# pipelining-with-disruptor

./: .gitignore  CHANGELOG.md  README.md  pipelining-with-disruptor.cabal
.github/workflows/: main.yaml
app/: Main.hs
app/copying/: Main.hs
app/factor/: Main.hs
app/sleep/: Main.hs
app/uppercase/: Main.hs
app/wc/: Main.hs
bench/: Main.hs
data/: test.txt
src/: CRC32.hs  Counter.hs  Disruptor.hs  Model.hs  ModelIO.hs  Pipeline.hs  QueueDeployment.hs  RingBufferClass.hs  Sharding.hs  Template.hs  Visualise.hs
src/LibMain/: Copying.hs  Factor.hs  Sleep.hs  UpperCase.hs  WordCount.hs
test/: DisruptorTest.hs
