cabal-version:   3.0
name:            pipelining-with-disruptor
version:         0.0.0
synopsis:
  Experiment in creating parallel pipelines using the Disruptor.

description:
  Please see the README on Github at <https://github.com/stevana/pipelining-with-disruptor#readme>

license:         BSD-2-Clause
license-file:    LICENSE
author:          Stevan Andjelkovic
maintainer:      stevana@users.noreply.github.com
copyright:       Copyright (c) 2023 Stevan Andjelkovic
category:        Concurrency
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

data-files:      data/test.txt

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    CRC32
    Disruptor
    Model
    Pipeline
    QueueDeployment
    Template
    Visualise

  build-depends:
    , array       >=0.5.4  && <0.6
    , base        >=4.17.0 && <4.18
    , bytestring  >=0.11.3 && <0.12
    , directory   >=1.3.7  && <1.4
    , filepath    >=1.4.2  && <1.5
    , process     >=1.6.16 && <1.7
    , stm         >=2.5.1  && <2.6
    , text        >=2.0.1  && <2.1
    , time        >=1.12.2 && <1.13

  hs-source-dirs:   src
  default-language: Haskell2010

executable exe
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base
    , pipelining-with-disruptor

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite test
  import:           warnings
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base
    , pipelining-with-disruptor

source-repository head
  type:     git
  location: https://github.com/stevana/pipelining-with-disruptor
