cabal-version:   3.0
name:            pipelining-with-disruptor
version:         0.0.0
synopsis:
  Experiment in creating parallel pipelines using the Disruptor.

description:
  Please see the README on Github at <https://github.com/stevana/pipelining-with-disruptor#readme>

license:         BSD-2-Clause
license-file:    LICENSE
author:          Stevan Andjelkovic
maintainer:      stevana@users.noreply.github.com
copyright:       Copyright (c) 2023 Stevan Andjelkovic
category:        Concurrency
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

data-files:      data/test.txt

common warnings
  ghc-options: -Wall

common debug
  ghc-options:
    -ddump-stg-final -ddump-to-file -ddump-simpl
    -dsuppress-module-prefixes -dsuppress-coercions -dsuppress-uniques
    -dsuppress-type-applications

common profile
  ghc-options: -prof -fprof-cafs -fprof-late -fno-prof-count-entries

library
  import:           warnings, debug
  exposed-modules:
    Counter
    CRC32
    Disruptor
    LibMain.Copying
    LibMain.Sleep
    LibMain.UpperCase
    LibMain.WordCount
    Model
    ModelIO
    Pipeline
    QueueDeployment
    RingBufferClass
    Sharding
    Template
    Visualise

  build-depends:
    , array       >=0.5.4  && <0.6
    , base        >=4.17.0 && <4.18
    , bytestring  >=0.11.3 && <0.12
    , containers  >=0.6.6  && <0.7
    , directory   >=1.3.7  && <1.4
    , filepath    >=1.4.2  && <1.5
    , process     >=1.6.16 && <1.7
    , QuickCheck  >=2.14.3 && <2.15
    , random      >=1.2.1  && <1.3
    , stm         >=2.5.1  && <2.6
    , text        >=2.0.1  && <2.1
    , time        >=1.12.2 && <1.13

  hs-source-dirs:   src
  default-language: Haskell2010

executable wc
  import:           warnings
  hs-source-dirs:   app/wc
  main-is:          Main.hs
  build-depends:
    , base
    , pipelining-with-disruptor

  default-language: Haskell2010
  ghc-options:      -O2 -threaded -rtsopts -with-rtsopts=-N

executable uppercase
  import:           warnings
  hs-source-dirs:   app/uppercase
  main-is:          Main.hs
  build-depends:
    , base
    , pipelining-with-disruptor

  default-language: Haskell2010
  ghc-options:      -O2 -threaded -rtsopts -with-rtsopts=-N

executable sleep
  import:           warnings, profile, debug

  -- profile, debug
  hs-source-dirs:   app/sleep
  main-is:          Main.hs
  build-depends:
    , base
    , pipelining-with-disruptor

  default-language: Haskell2010
  ghc-options:
    -O2 -threaded -rtsopts
    "-with-rtsopts=-N -qa -K1K  -p -s -hd -l-agu -A32M"

-- ghc-options:      -O2 -threaded -rtsopts "-with-rtsopts=-N -qa"

executable copying
  import:           warnings, profile, debug
  hs-source-dirs:   app/copying
  main-is:          Main.hs
  build-depends:
    , base
    , pipelining-with-disruptor

  default-language: Haskell2010
  ghc-options:
    -O2 -threaded -rtsopts
    "-with-rtsopts=-N -qa -p -s -hd -l-agu -A32M"

-- -K1K

-- ghc-options:      -O2 -threaded -rtsopts "-with-rtsopts=-N -qa"

test-suite test
  import:             warnings
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  other-modules:      DisruptorTest
  build-tool-depends: tasty-discover:tasty-discover
  build-depends:
    , base
    , pipelining-with-disruptor
    , tasty
    , tasty-hunit

  default-language:   Haskell2010
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N -fno-ignore-asserts

benchmark bench
  import:           warnings, debug, profile
  hs-source-dirs:   bench
  main-is:          Main.hs
  type:             exitcode-stdio-1.0
  build-depends:
    , base
    , deepseq
    , pipelining-with-disruptor
    , tasty-bench

  ghc-options:
    -O2 -threaded -rtsopts
    "-with-rtsopts=-N -qa -K1K  -p -s -hc -l-agu -A32M"

  -- -M500M

  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/stevana/pipelining-with-disruptor
